// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserList UserList with accounts snapshot 1`] = `
Array [
  <Paper
    className="root"
  >
    <Table
      className="table"
    >
      <TableHead>
        <TableRow>
          <TableCell>
            thAccountId
          </TableCell>
          <TableCell>
            thName
          </TableCell>
          <TableCell>
            thBalance
          </TableCell>
          <TableCell
            align="right"
          >
            thActions
          </TableCell>
        </TableRow>
      </TableHead>
      <TableBody>
        <TableRow
          className="row"
          id="id1"
          onClick={[Function]}
        >
          <TableCell />
          <TableCell>
            name1
          </TableCell>
          <TableCell>
            $
            100
          </TableCell>
          <TableCell
            align="right"
          >
            <Button
              color="primary"
              onClick={[Function]}
              size="small"
            >
              deposit
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              size="small"
            >
              withdraw
            </Button>
          </TableCell>
        </TableRow>
        <TableRow
          className="row"
          id="id2"
          onClick={[Function]}
        >
          <TableCell />
          <TableCell>
            name2
          </TableCell>
          <TableCell>
            $
            130
          </TableCell>
          <TableCell
            align="right"
          >
            <Button
              color="primary"
              onClick={[Function]}
              size="small"
            >
              deposit
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              size="small"
            >
              withdraw
            </Button>
          </TableCell>
        </TableRow>
      </TableBody>
    </Table>
  </Paper>,
  <TransactionDialog
    accountId=""
    handleClose={[Function]}
    open={false}
    transactions={null}
  />,
  <DepositWithdrawDialog
    accountId=""
    handleClose={[Function]}
    isDeposit={true}
    open={false}
  />,
]
`;

exports[`UserList UserList without accounts snapshot 1`] = `
Array [
  <Paper
    className="root"
  >
    <Table
      className="table"
    >
      <TableHead>
        <TableRow>
          <TableCell>
            thAccountId
          </TableCell>
          <TableCell>
            thName
          </TableCell>
          <TableCell>
            thBalance
          </TableCell>
          <TableCell
            align="right"
          >
            thActions
          </TableCell>
        </TableRow>
      </TableHead>
      <TableBody />
    </Table>
  </Paper>,
  <TransactionDialog
    accountId=""
    handleClose={[Function]}
    open={false}
    transactions={null}
  />,
  <DepositWithdrawDialog
    accountId=""
    handleClose={[Function]}
    isDeposit={true}
    open={false}
  />,
]
`;
